--- a/style.css
+++ b/style.css
@@ -187,6 +187,10 @@ input {
   padding-top: 30px;
 }
 
+.table-results {
+  width: 60%;
+}
+
 // /* Add Animation */
 // @keyframes slideIn {
 //   from {
